--- a/application/composer.json
+++ b/application/composer.json
@@ -8,6 +8,7 @@
         "php": ">=7.1.3",
         "firebase/php-jwt": "^5.0",
         "laravel/lumen-framework": "5.8.*",
+        "league/flysystem": "^1.0",
         "symfony/translation": "4.3.8"
     },
     "require-dev": {
